# M.A.Y.R.

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile-console  Dockerfile-server  README.md  docker-compose.yml
mongo-setup/: init-mongo.js
rust-console/: Cargo.toml  README.md
rust-console/src/: app_router.rs  error.rs  lib.rs
rust-console/src/agents/: coffee_store_agent.rs  coffee_summary_store.rs  mod.rs
rust-console/src/components/: home.rs  mod.rs
rust-console/src/components/coffee/: coffee_details.rs  coffee_store_form.rs  coffee_summaries.rs  coffee_summary.rs  mod.rs
rust-console/src/components/common/: text_form.rs
rust-server/: Cargo.toml  README.md  log4rs.yml
rust-server-model/: .gitignore  Cargo.toml  README.md  build.gradle.kts  smithy-build.json
rust-server-model/model/: common.smithy  create_city.smithy  errors.smithy  get_city.smithy  list_city.smithy  main.smithy
rust-server-model/src/: coffee_model.rs  common.rs  lib.rs  parser.rs
rust-server-model/src/coffee_store/: common.rs  create_coffee_store.rs  get_coffee_store.rs  list_coffee_stores.rs  mod.rs
rust-server-modle/: Cargo.toml
rust-server-modle/src/: coffee_model.rs
rust-server/src/: error.rs  main.rs
rust-server/src/dao/: mod.rs
rust-server/src/dao/coffee_store/: coffee_store_dao.rs  hash_map_coffee_store_dao.rs  mod.rs  mongo_coffee_store_dao.rs
rust-server/src/handlers/: create_coffee_store_handler.rs  get_coffee_store_handler.rs  list_coffee_stores_handler.rs  mod.rs
rust-server/src/utils/: error_utils.rs  mod.rs
smithy-parser/: Cargo.toml
smithy-parser/configuration/: smithy-idl.txt
smithy-parser/src/: lib.rs
(+5 files in other folders)
