[package]
name = "MAYR"
version = "0.1.0"
authors = ["Sean Flinn <sflinn54@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  "rust-server",
  "rust-console",
  "rust-server-model",
]
